deploy/dev/openframe-microservices/openframe-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openframe-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openframe-api
  template:
    metadata:
      labels:
        app: openframe-api
    spec:
      imagePullSecrets:
        - name: github-pat-secret

      containers:
        - name: openframe-api
          image: openframe-api
          ports:
            - containerPort: 8090
              name: http
            - containerPort: 8091
              name: management
          livenessProbe:
            httpGet:
              path: /management/v1/health
              port: management
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /management/v1/health
              port: management
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.5"
            limits:
              memory: "1Gi"
              cpu: "1"
